# server-watcher

./: .gitignore  README.md  env_setup.md
rust-server/: .env  .env.example  Cargo.toml  README.md
rust-server/src/: lib.rs  main.rs  parse_config.rs
rust-server/src/logging/: mod.rs
rust-server/src/logging/discord/: mod.rs  parsers.rs
rust-server/src/logging/file/: mod.rs  parsers.rs
rust-server/src/metrics/: interval.rs  mod.rs  warn.rs
