[package]
name = "rust-server"
version = "0.1.0"
authors = ["Jint3x <65330793+Jint3x@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sysinfo = "0.17.5"
env_plus = "0.1.2"
tokio = { version = "1.6", features = ["rt", "rt-multi-thread", "macros"] }